This commit tweaks a small margin issue that caused a scrollbar by default

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+
 }
 
 /* Standardized colours for quickswap (hero banner background excluded) */
@@ -13,16 +14,17 @@
 /* General styling */
 
 body {
-  margin: 0px;
-  padding: 0px;
+  margin: 0 auto;
+  padding: 0 auto;
   font-family: 'Montserrat', Arial, sans-serif;
   line-height: 1.5;
   background-color: var(--light-color);
+  width: 100%;
   
 }
 
 .page-wrapper {
-  margin: 15px;
+  margin: 0 auto;
   width: 100%;
   }
 
@@ -35,6 +37,7 @@ body {
   padding-right: 20px;
   background: var(--dark-color);
   color: var(--light-color);
+  width: 100%;
 }
 
 .header a {
@@ -77,6 +80,7 @@ li {
   justify-content: center;
   font-size: 3rem;
   font-weight: 500;
+  width: 100%;
   
 }
 
@@ -143,6 +147,7 @@ li {
   margin-top: 15px;
   text-align: center;
   max-width: 1600px;
+  width: 100%;
 }
 
 /* work container styling */
@@ -197,6 +202,7 @@ li {
   .work-section {
     position: relative;
     overflow: hidden;
+    width: 100%;
   
   }
 
